// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Table Header Props Renders \`columnConfig\`  prop correctly 1`] = `
<thead
  className="brew-TableHeader"
>
  <tr
    className="brew-TableRow"
  >
    <th
      className="brew-TableCell brew-TableHeaderColumn"
    >
      ColumnA
    </th>
    <th
      className="brew-TableCell brew-TableHeaderColumn"
    >
      ColumnB
    </th>
    <th
      className="brew-TableCell brew-TableHeaderColumn"
    >
      ColumnC
    </th>
  </tr>
</thead>
`;

exports[`Table Header Renders correctly with children 1`] = `
<thead
  className="brew-TableHeader"
>
  <tr
    className="brew-TableRow"
  >
    <th>
      Column1
    </th>
    <th>
      Column2
    </th>
    <th>
      Column3
    </th>
  </tr>
</thead>
`;
